[project]
name = "torch-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attr",
    "attrs",
    "decorator",
    "huggingface-hub",
    "numpy<2.0",
    "packaging",
    "psutil",
    "pyyaml",
    "safetensors",
    "scipy",
    "setuptools",
    "tokenizers",
    "torch==2.6.0",
    "transformers",
]
