[project]
name = "simplellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attr",
    "attrs",
    "decorator",
    "huggingface-hub",
    "numpy<2.0",
    "packaging",
    "psutil",
    "pyyaml",
    "safetensors",
    "scipy",
    "setuptools",
    "tokenizers",
    "torch==2.6.0",
    "transformers",
]

[[tool.uv.index]]
name = "gbdj"
url = "https://pip.gbdj.cc/"
[[tool.uv.index]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
[[tool.uv.index]]
name = "huaweicloud"
url = "https://mirrors.huaweicloud.com/ascend/repos/pypi/"