[project]
name = "simplellm"
version = "0.1.0"
description = "A Simple Large Language Model using Pytorch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attr",
    "attrs",
    "decorator",
    "huggingface-hub",
    "packaging",
    "psutil",
    "pyyaml",
    "safetensors",
    "scipy",
    "setuptools",
    "tokenizers",
    "torch",
    "transformers",
]
[project.optional-dependencies]
npu = [
  "simplellm[runtime_common]",
  "torch==2.6.0",
  "torch_npu==2.6.0",
  "numpy<2.0",
]

[[tool.uv.index]]
name = "gbdj"
url = "https://pip.gbdj.cc/"
[[tool.uv.index]]
name = "tsinghua_mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
[[tool.uv.index]]
name = "huaweicloud"
url = "https://mirrors.huaweicloud.com/ascend/repos/pypi/"